--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astro-community/astro-embed-youtube": "^0.2.2",
     "@astrojs/mdx": "^0.18.2",
     "@astrojs/rss": "^2.3.1",
     "@astrojs/sitemap": "^1.2.1",
+    "@fontsource/raleway": "^4.5.12",
     "astro": "^2.1.4",
     "remark": "^14.0.2"
   },
